--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+#H2 Setting
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
+spring.h2.console.path=/h2
+
+#Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:../service_db
 spring.datasource.username=sa
-spring.h2.console.path=/h2
+
+#Error settings
 server.error.include-message=always
