--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.username=sa
 
 #Error settings
 server.error.include-message=always
+
+#Actuator Settings
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
