--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,14 @@ server.error.include-message=always
 #Actuator Settings
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
+
+#Http protocole
+server.ssl.enabled=true
+# Keystore format
+server.ssl.key-store-type=PKCS12
+# The path to the keystore
+server.ssl.key-store=keystore.p12
+# Certificate password
+server.ssl.key-store-password=service
+# Certificate alias
+server.ssl.key-alias=accountant_service
