Move database to application folder and keep it persistence on restart

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.h2.console.settings.trace=false
 spring.h2.console.path=/h2
 
 #Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:../service_db
+spring.datasource.url=jdbc:h2:file:./service_db
 spring.datasource.username=sa
 
 #Error settings
@@ -18,11 +18,8 @@ management.endpoint.shutdown.enabled=true
 
 #Http protocole
 server.ssl.enabled=true
-# Keystore format
 server.ssl.key-store-type=PKCS12
-# The path to the keystore
 server.ssl.key-store=keystore.p12
-# Certificate password
 server.ssl.key-store-password=service
-# Certificate alias
 server.ssl.key-alias=accountant_service
+security.require-ssl=true
