--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=service
 server.ssl.key-alias=accountant_service
-security.require-ssl=true
+server.port=8443
