--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.h2.console.path=/h2
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./service_db
+spring.datasource.url=jdbc:h2:file:./service
 spring.datasource.username=sa
 
 #Error settings
@@ -19,7 +19,6 @@ management.endpoint.shutdown.enabled=true
 #Http protocole
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=keystore.p12
+server.ssl.key-store=service.p12
 server.ssl.key-store-password=service
 server.ssl.key-alias=accountant_service
-server.port=8443
